Updated the documentation a little bit

--- a/build
+++ b/build
@@ -1,8 +1,9 @@
 #!/bin/bash
 
-# Syntax: build <Optional Fancy Name Here>
+# Syntax: build-ls980/build <Optional Fancy Name Here>
 # This is a shortcut to build the ls980. It's simple and optimized
-# for one system.
+# for one system. It is important to run this command from the root of the
+# android project source tree.
 
 source build/envsetup.sh
 breakfast cm_ls980-userdebug
